# indicator-clipboard

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  indicator-clipboard.cpp  main.c
data/: indicator-clipboard.desktop
debian/: changelog  control  copyright
src/: indicator-clipboard.cpp  indicator-clipboard.h  main.cpp
tests/: trim.cpp
